Reduce build redundancy - build native assets once per CI job - do not attempt Helix.proj build in desktop `msbuild` - only cleanup framework references after packing managed projects

--- a/.azure/pipelines/ci.yml
+++ b/.azure/pipelines/ci.yml
@@ -144,6 +144,7 @@ stages:
                 -pack
                 -all
                 -noBuildJava
+                -noBuildNative
                 /p:OnlyPackPlatformSpecificPackages=true
                 $(_BuildArgs)
                 $(_InternalRuntimeDownloadArgs)
@@ -631,7 +632,7 @@ stages:
         displayName: Build shared fx
       - script: ./build.cmd -ci -nobl -restore -noBuild -projects src/Grpc/**/*.csproj
         displayName: Restore interop projects
-      - script: ./build.cmd -ci -nobl -noRestore -test -all -projects eng\helix\helix.proj /p:IsRequiredCheck=true /p:IsHelixJob=true /p:BuildInteropProjects=true /p:RunTemplateTests=true /p:ASPNETCORE_TEST_LOG_DIR=artifacts/log
+      - script: ./build.cmd -ci -nobl -noRestore -test -all -noBuildNative -projects eng\helix\helix.proj /p:IsRequiredCheck=true /p:IsHelixJob=true /p:BuildInteropProjects=true /p:RunTemplateTests=true /p:ASPNETCORE_TEST_LOG_DIR=artifacts/log
         displayName: Run build.cmd helix target
         env:
           HelixApiAccessToken: $(HelixApiAccessToken) # Needed for internal queues
